--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "busuanzi.pure.js": "^1.0.3",
+    "less": "^4.1.3",
     "vitepress": "1.0.0-beta.5"
   },
   "dependencies": {
