--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "docs:dev": "vitepress dev docs",
@@ -14,10 +15,10 @@
   "license": "ISC",
   "devDependencies": {
     "busuanzi.pure.js": "^1.0.3",
-    "less": "^4.1.3",
-    "vitepress": "1.0.0-beta.5"
+    "less": "^4.2.0",
+    "vitepress": "1.2.3"
   },
   "dependencies": {
-    "vue": "^3.3.4"
+    "vue": "^3.4.27"
   }
 }
